--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TUGAS AKHIR SIC</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="banner">
         <video autoplay loop muted playsinline>
-            <source src="images/pesonajogja.mp4" type="video/mp4">
+            <source src="images/pesonajogja.mp4" type="video/mp4" />
         </video>
         <div class="navbar">
-            <img class="logo1" src="images/smk.png" alt="Logo">
-            <img class="logo2" src="images/logo.png" alt="Logo">
+            <img class="logo1" src="images/smk.png" alt="Logo" />
+            <img class="logo2" src="images/logo.png" alt="Logo" />
         </div>
         <div class="content">
             <h1>Quality Control</h1>
             <h2>Kelayakan Suhu dan Gas di Kota Yogyakarta</h2>
             <div>
-                <a href="grafik/chart.html"><button type="button">Ayo Simak!</button></a>
+                <a href="grafik/chart.html"><button type="button">Click to Open</button></a>
             </div>
         </div>
     </div>
